--- a/texts/index.html
+++ b/texts/index.html
@@ -42,24 +42,21 @@
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Lexend Deca'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Regular';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Roboto Condensed Regular'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Roboto Condensed Regular'), url('/fonts/roboto-condensed.regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
 
@@ -85,7 +82,7 @@
   strong,
   b {
     color: #222;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
 
