--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -56,24 +56,21 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Lexend Deca'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Regular';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Roboto Condensed Regular'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Roboto Condensed Regular'), url('/fonts/roboto-condensed.regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
 
@@ -99,7 +96,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   strong,
   b {
     color: #222;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
 
