--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -52,24 +52,21 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   font-family: 'Lexend Deca';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Lexend Deca'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Lexend Deca'), url('/fonts/LexendDeca-Regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Regular';
   font-style: normal;
   font-weight: 400;
-  font-display: swap;
-  src: local('Roboto Condensed Regular'), url('fonts/LexendDeca-Regular.ttf'); 
+  src: local('Roboto Condensed Regular'), url('/fonts/roboto-condensed.regular.ttf'); 
 }
 
 @font-face {
   font-family: 'Roboto Condensed Bold';
   font-style: bold;
   font-weight: 700;
-  font-display: swap;
-  src: local('Roboto Condensed Bold'), url('fonts/roboto-condensed.bold.ttf'); 
+  src: local('Roboto Condensed Bold'), url('/fonts/roboto-condensed.bold.ttf'); 
 }
 
 
@@ -95,7 +92,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   strong,
   b {
     color: #222;
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
 
