--- a/info/index.html
+++ b/info/index.html
@@ -80,7 +80,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: #F5F5F5;
+    background-color: #ffffff;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
@@ -95,7 +95,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   h6,
   strong,
   b {
-    color: #222;
+    color: #283040;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
@@ -105,7 +105,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    color: #222;
+
     font-size: 23px;
     text-decoration: none;
     border: 0;
