--- a/links/index.html
+++ b/links/index.html
@@ -92,7 +92,7 @@
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: #F5F5F5;
+    background-color: #ffffff;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
@@ -107,7 +107,7 @@
   h6,
   strong,
   b {
-    color: #222;
+    color: #283040;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
@@ -117,7 +117,7 @@
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    color: #222;
+
     font-size: 23px;
     text-decoration: none;
     border: 0;
