--- a/texts/index.html
+++ b/texts/index.html
@@ -58,7 +58,7 @@
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: #F5F5F5;
+    background-color: #ffffff;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
@@ -73,7 +73,7 @@
   h6,
   strong,
   b {
-    color: #222;
+    color: #283040;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
@@ -83,7 +83,7 @@
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    color: #222;
+
     font-size: 23px;
     text-decoration: none;
     border: 0;
