--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -68,7 +68,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
     padding: 20px;
     max-width: 720px;
     text-align: left;
-    background-color: #F5F5F5;
+    background-color: #ffffff;
     word-wrap: break-word;
     overflow-wrap: break-word;
     line-height: 1.5;
@@ -83,7 +83,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   h6,
   strong,
   b {
-    color: #222;
+    color: #283040;
     font-family: 'Roboto Condensed Bold', sans-serif;
   }
 
@@ -93,7 +93,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
 
   .title {
     font-family: 'Roboto Condensed', sans-serif;
-    color: #222;
+
     font-size: 23px;
     text-decoration: none;
     border: 0;
