--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   }
 
   .title {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     font-size: 23px;
     text-decoration: none;
     border: 0;
