--- a/info/index.html
+++ b/info/index.html
@@ -104,7 +104,7 @@ If you found a typo or wrong formatting or any other issue on an e-book, apart f
   }
 
   .title {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     font-size: 23px;
     text-decoration: none;
     border: 0;
