--- a/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/the-core-features-of-pragmatic-dharma/index.html
@@ -96,7 +96,7 @@ Pragmatic Dharma, at its core, is about asking the question: What works? If some
   }
 
   .title {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     font-size: 23px;
     text-decoration: none;
     border: 0;
