--- a/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
+++ b/texts/pragmatic-dharma/what-is-pragmatic-dharma/index.html
@@ -92,7 +92,7 @@ I’ve been thinking a lot about what “pragmatic dharma” is lately. This is 
   }
 
   .title {
-    font-family: 'Roboto Condensed', sans-serif;
+    font-family: 'Roboto Condensed Bold', sans-serif;
     font-size: 23px;
     text-decoration: none;
     border: 0;
